--- a/src/styles/_markdown-style.scss
+++ b/src/styles/_markdown-style.scss
@@ -62,12 +62,11 @@
 .markdown {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  line-height: 1.5;
   color: var(--content-text-color);
   font-family: $font-family;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 2;
   word-wrap: break-word;
 }
 
@@ -293,9 +292,9 @@
   padding: 0.2em 0.4em;
 }
 
-.markdown :not(pre)>code.language-text {
+.markdown :not(pre) > code.language-text {
   background: rgba(135, 131, 120, 0.15);
-  color: #EB5757;
+  color: #eb5757;
   overflow-wrap: break-word;
 }
 
@@ -311,7 +310,7 @@
   appearance: none;
 }
 
-.markdown :checked+.radio-label {
+.markdown :checked + .radio-label {
   position: relative;
   z-index: 1;
   border-color: #0366d6;
@@ -634,11 +633,11 @@
   clear: both;
 }
 
-.markdown> :first-child {
+.markdown > :first-child {
   margin-top: 0 !important;
 }
 
-.markdown> :last-child {
+.markdown > :last-child {
   margin-bottom: 0 !important;
 }
 
@@ -656,7 +655,7 @@
 .markdown table,
 .markdown ul {
   margin-top: 0;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 .markdown hr {
@@ -673,11 +672,11 @@
   border-left: 0.25em solid var(--markdown-blockquote-border-color);
 }
 
-.markdown blockquote> :first-child {
+.markdown blockquote > :first-child {
   margin-top: 0;
 }
 
-.markdown blockquote> :last-child {
+.markdown blockquote > :last-child {
   margin-bottom: 0;
 }
 
@@ -687,7 +686,7 @@
 .markdown h4,
 .markdown h5,
 .markdown h6 {
-  margin-top: 24px;
+  margin-top: 48px;
   margin-bottom: 16px;
   font-weight: 600;
   line-height: 1.25;
@@ -745,11 +744,11 @@
   text-align: -webkit-match-parent;
 }
 
-.markdown li>p {
+.markdown li > p {
   margin-top: 16px;
 }
 
-.markdown li+li {
+.markdown li + li {
   margin-top: 0.25em;
 }
 
@@ -822,7 +821,7 @@
   word-wrap: normal;
 }
 
-.markdown pre>code {
+.markdown pre > code {
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -999,13 +998,17 @@
   list-style-type: none;
 }
 
-.markdown .task-list-item+.task-list-item {
+.markdown .task-list-item + .task-list-item {
   margin-top: 3px;
 }
 
 .markdown .task-list-item input {
   margin: 0 0.2em 0.25em -1.6em;
   vertical-align: middle;
+}
+
+.markdown div.gatsby-highlight {
+  margin-bottom: 32px;
 }
 
 // added for toc
@@ -1069,7 +1072,7 @@
 }
 
 // caption
-.markdown .gatsby-resp-image-wrapper+em {
+.markdown .gatsby-resp-image-wrapper + em {
   display: block;
   text-align: center;
   font-style: italic;
