--- a/src/components/post-navigator/style.scss
+++ b/src/components/post-navigator/style.scss
@@ -45,6 +45,10 @@
       font-weight: 600;
       margin-bottom: 7px;
       line-height: 1.4;
+
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
