--- a/src/components/page-footer/style.scss
+++ b/src/components/page-footer/style.scss
@@ -5,12 +5,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 62px;
-  margin-top: auto;
+  height: 72px;
+  margin-top: 15px;
 
   .page-footer {
     @include content-max-width;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .link {
       font-weight: 700;
@@ -19,8 +21,8 @@
       margin-right: 20px;
     }
 
-    a {
-      color: #3A95FF;
+    .social-links {
+      display: flex;
     }
   }
 }
